# yoink-bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  justfile  pyproject.toml
docker/: Dockerfile.app
scripts/: entrypoint.sh  export_cookies.py  grab_cookies.py
src/db/: README.md  alembic.ini
src/db/migrations/: env.py
src/db/migrations/versions/: 2de4cb8db991_nsfw_domains_keywords_group_nsfw_allowed.py  3fa1e9b0c2d5_nsfw_seed_data.py  4998b8ca885d_add_bot_settings.py  4accc0ee70c6_access_control.py  7ac692c4c515_add_message_id_clip_start_clip_end_to_.py  (+4 more)
src/tests/: conftest.py  test_ffmpeg.py  test_i18n.py  test_postprocess.py  test_sender.py  test_url_normalizer.py  test_user_settings.py
src/web/: .env.example  README.md  components.json  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/web/src/: App.tsx  main.tsx
src/yoink/: README.md  main.py
src/yoink/api/: auth.py  deps.py  main.py  schemas.py
src/yoink/bot/: __init__.py  app.py  bot_commands.py  middleware.py  progress.py
src/yoink/commands/: __init__.py  admin.py  args.py  ask_menu.py  clean.py  cookie.py  cut.py  format.py  forum.py  group.py  inline.py  keyboard.py  lang.py  link.py  list_formats.py  media.py  mediainfo.py  nsfw.py  playlist.py  proxy.py  search.py  settings.py  split.py  start.py  subs.py  tags.py  url_handler.py
src/yoink/config/: settings.py
src/yoink/download/: __init__.py  manager.py  ytdlp.py
src/yoink/i18n/: __init__.py  loader.py
src/yoink/services/: cookies.py  nsfw.py  proxy.py
src/yoink/storage/: __init__.py  bot_settings.py  db.py  download_log.py  file_cache.py  group_repo.py  models.py  rate_limit.py  user_settings.py
src/yoink/upload/: __init__.py  caption.py  sender.py
src/yoink/url/: domains.py  resolver.py
src/yoink/utils/: __init__.py  formatting.py  safe_telegram.py
(+29 files in other folders)
